docs/grammar.txt
    program : PROGRAM variable SEMI block DOT

    block : declarations compound_statement

    declarations : (VAR (variable_declaration SEMI)+)? (procedure_declaration | function_declaration)*

    variable_declaration : ID (COMMA ID)* COLON type_spec

    procedure_declaration : PROCEDURE ID (LPAREN parameter_list RPAREN)? SEMI block SEMI

    function_declaration : FUNCTION ID (LPAREN parameter_list RPAREN)? COLON type_spec SEMI block SEMI

    parameter_list : parameters (SEMI parameters)*

    parameters : ID (COMMA ID)* COLON type_spec

    type_spec : INTEGER
              | REAL
              | BOOLEAN
              | STRING

    compound_statement : BEGIN statement_list END

    statement_list : statement
                   | statement SEMI statement_list

    statement : compound_statement
              | assignment_statement
              | procedure_call_statement
              | if_statement
              | while_statement
              | for_statement
              | write_statement
              | writeln_statement
              | empty

    assignment_statement : variable ASSIGN expression

    procedure_call_statement : ID (LPAREN (expression (COMMA expression)*)? RPAREN)?

    if_statement : IF expression THEN statement (ELSE statement)?

    while_statement : WHILE expression DO statement
    
    for_statement : FOR variable ASSIGN expression (TO|DOWNTO) expression DO statement

    write_statement : WRITE LPAREN expression RPAREN

    writeln_statement : WRITELN LPAREN expression RPAREN

    empty :

    expression : arithmetic_expr ((EQUAL
                                 | NOT_EQUAL
                                 | LESS_THAN
                                 | LESS_EQUAL
                                 | GREATER_THAN
                                 | GREATER_EQUAL) arithmetic_expr)?

    // `+` can be used for numeric addition or string concatenation.
    // Comparison operators may compare numeric expressions or strings.

    arithmetic_expr : term ((PLUS | MINUS) term)*

    term : factor ((MUL | INTEGER_DIV | FLOAT_DIV) factor)*

    factor : PLUS factor
           | MINUS factor
           | INTEGER_CONST
           | REAL_CONST
           | BOOLEAN_CONST
           | STRING_CONST
           | function_call
           | LPAREN expression RPAREN
           | variable

    function_call : ID LPAREN (expression (COMMA expression)*)? RPAREN

    variable: ID
