src/pascal/Parser.py
from .tokens import *
from .nodes import *

class Parser(object):
    """
    The parser operates at the token level.\n
    The grammar is represented in the Parser's methods. The Parser turns text into an AST for the semantic analyser visit\n
    Each method in the parser is responsible for turning a sequence of tokens into a node in the AST\n
    Syntax errors come from here
    """
    def __init__(self,lexer):
        self.lexer = lexer
        self.current_token = self.lexer.get_next_token()
        self.next_token = self.lexer.get_next_token()

    def __str__(self):
        return f"Parser | Current Token: {self.current_token}"
    
    def __repr__(self):
        return self.__str__()

    def eat(self, token_type):
        if self.current_token.type == token_type:
            self.current_token = self.next_token
            self.next_token = self.lexer.get_next_token()
        else:
            raise ParserError(
                f"Expected {token_type}, got {self.current_token.type}",
                self.current_token.line,
                self.current_token.column,
            )


    def program(self):
        "program : PROGRAM variable SEMI block DOT"
        self.eat(PROGRAM)
        program_name = self.variable()
        self.eat(SEMI)
        block_node = self.block()
        self.eat(DOT)
        return Program(program_name, block_node)

    def block(self):
        "block : declarations compound_statement"
        vars = self.declarations()
        cmpd_nodes = self.compound_statement()
        return Block(vars, cmpd_nodes)

    def declarations(self):
        """
        currently declarations are a plain list instead of a node itself
        declarations : (VAR (variable_declaration SEMI)+)? (procedure_declaration | function_declaration)*
        """
        declarations = []
        if self.current_token.type == VAR:
            self.eat(VAR)
            while self.current_token.type == ID:
                var_decl = self.variable_declaration()
                declarations.extend(var_decl)
                self.eat(SEMI)
        while self.current_token.type in (PROCEDURE,FUNCTION):
            if self.current_token.type == PROCEDURE:
                proc_decl = self.procedure_declaration()
            else:
                proc_decl = self.function_declaration()
            declarations.append(proc_decl)
        return declarations

    def variable_declaration(self):
        """variable_declaration : ID (COMMA ID)* COLON type_spec"""
        var_nodes = [Var(self.current_token)]  # first ID
        self.eat(ID)

        while self.current_token.type == COMMA: # keeps receiving variables with commas
            self.eat(COMMA)
            var_nodes.append(Var(self.current_token))
            self.eat(ID)

        self.eat(COLON)
        type_node = self.type_spec() # We determine their type
        var_declarations = [VarDecl(var_node, type_node) for var_node in var_nodes]
        return var_declarations # then return the list of var declarations with that type
    
    def procedure_declaration(self):
        "procedure_declaration : PROCEDURE ID (LPAREN parameter_list RPAREN)? SEMI block SEMI"
        param_list = []
        self.eat(PROCEDURE)
        token = self.current_token          # gets the name of the procedure from the value of the current token
        proc_name = self.current_token.value
        self.eat(ID)
        if self.current_token.type == LPAREN:
            self.eat(LPAREN)
            param_list = self.parameter_list()
            self.eat(RPAREN)
        self.eat(SEMI)
        block = self.block()
        self.eat(SEMI)

        return ProcDecl(token, proc_name, param_list, block)
    
    def function_declaration(self):
        "function_declaration : FUNCTION ID (LPAREN parameter_list RPAREN)? COLON type_spec SEMI block SEMI"
        param_list = []
        self.eat(FUNCTION)
        token = self.current_token          # gets the name of the procedure from the value of the current token
        func_name = self.current_token.value
        self.eat(ID)
        if self.current_token.type == LPAREN:
            self.eat(LPAREN)
            param_list = self.parameter_list()
            self.eat(RPAREN)
        self.eat(COLON)
        return_type = self.type_spec()
        self.eat(SEMI)
        block = self.block()
        self.eat(SEMI)

        return FuncDecl(token, func_name, param_list, return_type, block)

    def parameter_list(self):
        """
        We have this so that we can declare parameters of different types inside procedure paranthesis\n
        parameter_list : parameters (SEMI parameters)*
        """
        params = self.parameters()
        while self.current_token.type == SEMI:
            self.eat(SEMI)
            # Parse one more parameter group and merge it into the same flat list.
            params.extend(self.parameters())
        return params

    def parameters(self):
        """parameters : ID (COMMA ID)* COLON type_spec"""
        parameter_names = [Var(self.current_token)]  # first ID since if param list is being called, there must be at least one parameter
        self.eat(ID)

        while self.current_token.type == COMMA:     # keeps receiving param names with commas
            self.eat(COMMA)
            parameter_names.append(Var(self.current_token))
            self.eat(ID)

        self.eat(COLON)
        type_node = self.type_spec()                # We determine their type
        parameters = [Param(var_node, type_node) for var_node in parameter_names]
        return parameters # then return the list of parameters with that type


    def type_spec(self):
        """
        type_spec : INTEGER | REAL | BOOLEAN | STRING
        """
        token = self.current_token 
        if self.current_token.type == INTEGER:
            self.eat(INTEGER)
        elif self.current_token.type == REAL:
            self.eat(REAL)
        elif self.current_token.type == BOOLEAN:
            self.eat(BOOLEAN)
        elif self.current_token.type == STRING:
            self.eat(STRING)
        else:
            raise ParserError(
                f"Expected type specifier, got {self.current_token.type}",
                self.current_token.line,
                self.current_token.column,
            )
        node = Type(token)
        return node

    def compound_statement(self):
        """
        compound_statement: BEGIN statement_list END
        """
        self.eat(BEGIN)
        nodes = self.statement_list()
        self.eat(END)

        root = Compound()
        for node in nodes:
            root.children.append(node)
        return root


    def statement_list(self):
        """
        statement_list : statement
                    \\| statement SEMI statement_list
        """
        nodes = [self.statement()]
        while self.current_token.type == SEMI:
            self.eat(SEMI)
            if self.current_token.type == END:
                break
            nodes.append(self.statement())
        return nodes

    def statement(self):
        """
        statement : compound_statement
                | assignment_statement
                | procedure_call_statement
                | if_statement
                | while_statement
                | for_statement
                | write_statement
                | writeln_statement
                | empty
        """
        if self.current_token.type == BEGIN:
            node = self.compound_statement()
        elif self.current_token.type == ID:
            if self.next_token.type == ASSIGN:
                node = self.assignment_statement()
            else:
                node = self.procedure_call_statement()
        elif self.current_token.type == IF:
            node = self.if_statement()
        elif self.current_token.type == WHILE:
            node = self.while_statement()
        elif self.current_token.type == FOR:
            node = self.for_statement()
        elif self.current_token.type == WRITE:
            node = self.write_statement()
        elif self.current_token.type == WRITELN:
            node = self.writeln_statement()        
        else:
            node = self.empty()
        return node

    def assignment_statement(self):
        """
        assignment_statement : variable ASSIGN expression
        """
        left = self.variable()
        token = self.current_token
        self.eat(ASSIGN)
        right = self.expression()
        node = Assign(token, left, right)
        return node
    
    def procedure_call_statement(self):
        token = self.current_token
        proc_name = self.current_token.value
        self.eat(ID)

        arguments = []

        if self.current_token.type == LPAREN:
            self.eat(LPAREN)
            if self.current_token.type != RPAREN:
                arguments.append(self.expression())
                while self.current_token.type == COMMA:
                    self.eat(COMMA)
                    arguments.append(self.expression())
            self.eat(RPAREN)

        return ProcedureCall(token, proc_name, arguments)

    def if_statement(self):
        token = self.current_token
        self.eat(IF)
        condition = self.expression()
        self.eat(THEN)
        true_statement = self.statement()
        if self.current_token.type == ELSE:
            self.eat(ELSE)
            false_statement = self.statement()
        else:
            false_statement = None
        node = If(token, condition, true_statement, false_statement)
        return node
    
    def while_statement(self):
        token = self.current_token
        self.eat(WHILE)
        condition = self.expression()
        self.eat(DO)
        statement = self.statement()
        node = While(token, condition, statement)
        return node
    
    def for_statement(self):
        token = self.current_token
        self.eat(FOR)
        var = self.variable()
        self.eat(ASSIGN)
        start_expr = self.expression()
        direction = self.current_token.type
        if direction == TO:
            self.eat(TO)
        else:
            self.eat(DOWNTO)
        end_expr = self.expression()
        self.eat(DO)
        statement = self.statement()
        node = For(token, var, start_expr, direction, end_expr, statement)
        return node

    def write_statement(self):
        token = self.current_token
        self.eat(WRITE)
        self.eat(LPAREN)
        expression = self.expression()
        self.eat(RPAREN)
        node = Write(token, expression)
        return node     
    
    def writeln_statement(self):
        token = self.current_token
        self.eat(WRITELN)
        self.eat(LPAREN)
        expression = self.expression()
        self.eat(RPAREN)
        node = WriteLn(token, expression)
        return node
         
    def variable(self):
        """
        variable : ID
        """
        node = Var(self.current_token)
        self.eat(ID)
        return node

    def empty(self):
        "empty :"
        return NoOp()

    def expression(self):
        """
        Returns the value of either a plain arithmetic expression or
        a comparison between two arithmetic expressions

        expression : arithmetic_expr ((EQUAL
                                     | NOT_EQUAL
                                     | LESS_THAN
                                     | LESS_EQUAL
                                     | GREATER_THAN
                                     | GREATER_EQUAL) arithmetic_expr)?
        """
        node = self.arithmetic_expr()
        if self.current_token.type in (
            EQUAL,
            NOT_EQUAL,
            LESS_THAN,
            LESS_EQUAL,
            GREATER_THAN,
            GREATER_EQUAL,
        ):
            op = self.current_token
            self.eat(op.type)
            right = self.arithmetic_expr()
            node = BinaryOperation(op, node, right)
        return node

    def arithmetic_expr(self):
        """
        Returns an value from the result of the +/- arithmetic expressions

        arithmetic_expr : term ((PLUS | MINUS) term)*
        """
        node = self.term()

        while self.current_token.type in (PLUS, MINUS):
            op = self.current_token
            if op.type == PLUS:
                self.eat(PLUS)
            elif op.type == MINUS:
                self.eat(MINUS)

            right = self.term()
            node = BinaryOperation(op, node, right)
        return node
    
    # parser term precedence
    def term(self):
        node = self.factor()
        while self.current_token.type in (MUL, FLOAT_DIV, INTEGER_DIV):
            op = self.current_token
            if op.type == MUL:
                self.eat(MUL) 
            elif op.type == FLOAT_DIV:
                self.eat(FLOAT_DIV) 
            elif op.type == INTEGER_DIV:
                self.eat(INTEGER_DIV) 

            right = self.factor()
            node = BinaryOperation(op, node, right)
        return node

    
    def factor(self):
        """
        Returns an integer value for the current token and then eats it

        OR

        Returns the integer value of the expression in the parentheses and eats the parentheses

        factor : PLUS factor
            | MINUS factor
            | INTEGER_CONST
            | REAL_CONST
            | BOOLEAN_CONST
            | STRING_CONST
            | LPAREN expression RPAREN
            | variable
        """
        token = self.current_token
        if token.type in (PLUS, MINUS):
            self.eat(token.type)                       # consume the unary operator
            child = self.factor()                      # then parse the operand
            return UnaryOperation(token, child)
        
        elif token.type == LPAREN:
            self.eat(LPAREN)
            node = self.expression()
            self.eat(RPAREN)
        elif token.type == INTEGER_CONST:
            self.eat(INTEGER_CONST)
            node = IntegerNode(token)
        elif token.type == REAL_CONST:
            self.eat(REAL_CONST)
            node = RealNode(token)
        elif token.type == BOOLEAN_CONST:
            self.eat(BOOLEAN_CONST)
            node = BooleanNode(token)
        elif token.type == STRING_CONST:    
            self.eat(STRING_CONST)
            node = StringNode(token)
        elif token.type == ID and self.next_token.type == LPAREN: # function calls start with ID
            node = self.function_call()
        else:
            node = self.variable()
        return node
    
    def function_call(self):
        "function_call : ID LPAREN (expression (COMMA expression)*)? RPAREN"
        token = self.current_token
        func_name = token.value
        self.eat(ID)
        self.eat(LPAREN)
        arguments = []
        if self.current_token.type != RPAREN:
            arguments.append(self.expression())
            while self.current_token.type == COMMA:
                self.eat(COMMA)
                arguments.append(self.expression())
        self.eat(RPAREN)

        return FunctionCall(token, func_name, arguments)
    
    def parse(self):
        node = self.program()
        if self.current_token.type != EOF:
            raise ParserError(
                f"Unexpected token after program end: {self.current_token.type}",
                self.current_token.line,
                self.current_token.column,
            )
        return node
